Updates the builds files

--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -1,4 +1,4 @@
----
+  ---
 
 - name: "configuration play." 
   hosts: web
@@ -26,3 +26,5 @@
 
   roles:
     # Your code here
+
+# VS Code Extension Version: 1.4.0
