--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,6 +141,7 @@ jobs:
              cd backend
              npm install
              npm audit fix --audit-level=critical --force
+             npm audit fix --force
              npm audit --audit-level=critical
 
 #   deploy-infrastructure:
