Fix: scan error fix 3

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -142,6 +142,8 @@ jobs:
              npm install
              npm audit fix --audit-level=critical --force
              npm audit fix --force
+             npm audit fix --force
+             npm audit fix --force
              npm audit --audit-level=critical
 
 #   deploy-infrastructure:
