Fix: scan error fix 4

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -142,8 +142,7 @@ jobs:
              npm install
              npm audit fix --audit-level=critical --force
              npm audit fix --force
-             npm audit fix --force
-             npm audit fix --force
+             npm update path-parse --depth 3
              npm audit --audit-level=critical
 
 #   deploy-infrastructure:
