Updates scan dependencies 2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -111,11 +111,6 @@ jobs:
       - slack/notify:
           branch_pattern: master
           channel: C04CPS646NP
-          event: pass
-          template: success_tagged_deploy_1
-      - slack/notify:
-          branch_pattern: master
-          channel: C04CPS646NP
           event: fail
           template: basic_fail_1
                 
@@ -136,11 +131,6 @@ jobs:
              cd backend
              npm install
              npm run test
-      - slack/notify:
-          branch_pattern: master
-          channel: C04CPS646NP
-          event: pass
-          template: success_tagged_deploy_1
       - slack/notify:
           branch_pattern: master
           channel: C04CPS646NP
@@ -165,6 +155,11 @@ jobs:
              npm install
              npm audit fix --audit-level=critical --force
              npm audit --audit-level=critical
+      - slack/notify:
+          branch_pattern: master
+          channel: C04CPS646NP
+          event: fail
+          template: basic_fail_1
 
   scan-backend:
     docker:
