--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -220,7 +220,7 @@ jobs:
             # Your code here
             aws ec2 describe-instances \ 
             --query 'Reservations[*].Instances[*].PublicIpAddress' \ 
-            --filters "Name=tag:Name,Values=backend-${CIRCLECI_WORKFLOW_ID:0:7}" \ 
+            --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \ 
             --output test >> .circleci/ansible/inventory.txt
       - persist_to_workspace:
           root: ~/
