Adds infrastructure deployment 5

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -217,9 +217,8 @@ jobs:
       - run:
           name: Add back-end ip to ansible inventory
           command: |
-            # Your code here
             aws ec2 describe-instances \ 
-            --query 'Reservations[*].Instances[*].PublicIpAddress' \ 
+            --query "Reservations[*].Instances[*].PublicIpAddress" \ 
             --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \ 
             --output text >> .circleci/ansible/inventory.txt
       - persist_to_workspace:
