--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -217,9 +217,9 @@ jobs:
       - run:
           name: Add back-end ip to ansible inventory
           command: |
-            aws ec2 describe-instances \ 
-            --query "Reservations[*].Instances[*].PublicIpAddress" \ 
-            --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \ 
+            aws ec2 describe-instances \
+            --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+            --query "Reservations[*].Instances[*].PublicDnsName" \
             --output text >> .circleci/ansible/inventory.txt
       - persist_to_workspace:
           root: ~/
