Adds error to template file

--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -8,7 +8,7 @@ Parameters:
 
 Resources:
   InstanceSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
+    Type: AWS::EC2::SecurityGroupss
     Properties:
       GroupName: !Sub UdaPeople-${ID}
       GroupDescription: Allow port 22 and port 3030.
@@ -35,3 +35,5 @@ Resources:
       Tags:
         - Key: Name
           Value: !Sub backend-${ID}
+
+# VS Code Extension Version: 1.5.0
