--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -224,7 +224,7 @@ jobs:
             aws ec2 describe-instances \
             --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
             --query "Reservations[*].Instances[*].PublicDnsName" \
-            --output text >> .circleci/ansible/inventory.txt
+            --output tsxt >> .circleci/ansible/inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
