--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -8,6 +8,7 @@
   become_user: root  
   gather_facts: false
   vars:
+    - NODEJS_VERSION: "12"
     - ansible_python_interpreter: /usr/bin/python3
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
