--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -266,7 +266,13 @@ jobs:
             # Your code here
             cd .circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
-      # Here's where you will add some code to rollback on failure
+      - slack/notify:
+          branch_pattern: master
+          channel: C04CPS646NP
+          event: fail
+          template: basic_fail_1
+      # Here's where you will add some code to rollback on failure  
+      - destroy-environment 
 
 
 #   run-migrations:
