--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -245,7 +245,7 @@ jobs:
   configure-infrastructure:
     docker:
       # Docker image here that supports Ansible
-      - image: python:3.7-alpine3.11
+      - image: amazon/aws-cli
     steps:
       # Checkout code from git
       - checkout
@@ -259,7 +259,7 @@ jobs:
           name: Install dependencies
           command: |
             # Your code here
-            apk add --update --no-cache aws-cli ansible curl
+            yum install -y tar gzip ansible python3
       - run:
           name: Configure server
           command: |
