--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -253,7 +253,8 @@ jobs:
           name: Install dependencies
           command: |
             # Your code here
-            yum install -y tar gzip ansible python3
+            yum install -y tar gzip python3 python3-pip && \
+            python3 -m pip install --user ansible
       # Add ssh keys with fingerprint
       - add_ssh_keys:
            fingerprints: ["6c:f8:3d:35:4b:aa:19:6a:94:22:b8:52:e1:75:9d:23"]
