--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -245,7 +245,7 @@ jobs:
   configure-infrastructure:
     docker:
       # Docker image here that supports Ansible
-      - image: amazon/aws-cli
+      - image: ansible/centos7-ansible:latest
     steps:
       # Checkout code from git
       - checkout
@@ -253,8 +253,7 @@ jobs:
           name: Install dependencies
           command: |
             # Your code here
-            yum install -y tar gzip python3 python3-pip && \
-            python3 -m pip install --user ansible
+            yum install -y tar gzip aws-cli
       # Add ssh keys with fingerprint
       - add_ssh_keys:
            fingerprints: ["6c:f8:3d:35:4b:aa:19:6a:94:22:b8:52:e1:75:9d:23"]
