--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -245,7 +245,7 @@ jobs:
   configure-infrastructure:
     docker:
       # Docker image here that supports Ansible
-      - image: ansible/centos7-ansible:latest
+      - image: python:3.7-alpine3.11
     steps:
       # Checkout code from git
       - checkout
@@ -253,7 +253,7 @@ jobs:
           name: Install dependencies
           command: |
             # Your code here
-            yum install -y tar gzip aws-cli
+            apk add --update --no-cache tar gzip awscli
       # Add ssh keys with fingerprint
       - add_ssh_keys:
            fingerprints: ["6c:f8:3d:35:4b:aa:19:6a:94:22:b8:52:e1:75:9d:23"]
