--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -253,10 +253,7 @@ jobs:
           name: Install dependencies
           command: |
             # Your code here
-            apk add --update --no-cache tar gzip curl unzip && \
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
-            unzip awscliv2.zip && \
-            ./aws/install
+            apk add --update --no-cache tar gzip curl unzip ansible aws-cli
       # Add ssh keys with fingerprint
       - add_ssh_keys:
            fingerprints: ["6c:f8:3d:35:4b:aa:19:6a:94:22:b8:52:e1:75:9d:23"]
@@ -269,11 +266,11 @@ jobs:
             # Your code here
             cd .circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
-      - slack/notify:
-          branch_pattern: master
-          channel: C04CPS646NP
-          event: fail
-          template: basic_fail_1
+      # - slack/notify:
+      #     branch_pattern: master
+      #     channel: C04CPS646NP
+      #     event: fail
+      #     template: basic_fail_1
       # Here's where you will add some code to rollback on failure  
       - destroy-environment 
 
