Update ansible job 10

--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -28,7 +28,7 @@
       apt:
         name: python3
         state: present
-      when: not python3_present.exists
+      when: not python3_present.stat.exists
       
 
   # Get the environment variables from CircleCI and add to the EC2 instance
