--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -256,7 +256,8 @@ jobs:
             apk add --update --no-cache tar gzip curl unzip ansible && \
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
             unzip awscliv2.zip && \
-            ./aws/install
+            ./aws/install && \
+            ls
       # Add ssh keys with fingerprint
       - add_ssh_keys:
            fingerprints: ["6c:f8:3d:35:4b:aa:19:6a:94:22:b8:52:e1:75:9d:23"]
