--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -256,7 +256,7 @@ jobs:
             apk add --update --no-cache tar gzip curl unzip ansible && \
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
             unzip awscliv2.zip && \
-            ./aws/install && \
+            ./aws/install -i /usr/local/aws-cli -b /usr/local/bin && \
             /usr/local/bin/aws --version
       # Add ssh keys with fingerprint
       - add_ssh_keys:
