--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -265,7 +265,7 @@ jobs:
           command: |
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
             unzip awscliv2.zip && \
-            ./aws/install
+            ./aws/install -i /usr/local/aws-cli -b /usr/local/bin
       - run:
           name: Configure server
           command: |
