Update ansible job 10

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -253,7 +253,10 @@ jobs:
           name: Install dependencies
           command: |
             # Your code here
-            apk add --update --no-cache tar gzip curl unzip ansible aws-cli
+            apk add --update --no-cache tar gzip curl unzip ansible && \
+            apk update
+            apk add --update py-pip
+            python3 -m pip install awscliaws-cli
       # Add ssh keys with fingerprint
       - add_ssh_keys:
            fingerprints: ["6c:f8:3d:35:4b:aa:19:6a:94:22:b8:52:e1:75:9d:23"]
