--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -245,7 +245,7 @@ jobs:
   configure-infrastructure:
     docker:
       # Docker image here that supports Ansible
-      - image: python:3.7-alpine3.11
+      - image: amazon/aws-cli
     steps:
       # Checkout code from git
       - checkout
@@ -253,10 +253,8 @@ jobs:
           name: Install dependencies
           command: |
             # Your code here
-            apk add --update --no-cache tar gzip curl unzip ansible && \
-            apk update
-            apk add --update py-pip
-            python3 -m pip install awscliaws-cli
+            yum update -y && \
+            yum install -y tar gzip curl unzip amazon-linux-extras install ansible2 
       # Add ssh keys with fingerprint
       - add_ssh_keys:
            fingerprints: ["6c:f8:3d:35:4b:aa:19:6a:94:22:b8:52:e1:75:9d:23"]
