--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -300,6 +300,10 @@ jobs:
           command: |
             cd backend
             npm install
+            npm audit fix --audit-level=critical --force
+            npm audit fix --force
+            npm update path-parse --depth 3
+            npm audit --audit-level=critical
             # Run and save the migration output
             npm run migrations > migrations_dump.txt
       - run:
