--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -288,6 +288,8 @@ jobs:
     steps:
       # Checkout code from git
       - checkout
+      - restore_cache:
+          keys: [scan-backend]
       # - run:
       #     name: Install nodejs on amazon centos
       #     command: |
@@ -299,11 +301,6 @@ jobs:
           name: Run migrations
           command: |
             cd backend
-            npm install
-            npm audit fix --audit-level=critical --force
-            npm audit fix --force
-            npm update path-parse --depth 3
-            npm audit --audit-level=critical
             # Run and save the migration output
             npm run migrations > migrations_dump.txt
       - run:
