--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -302,6 +302,10 @@ jobs:
           command: |
             cd backend
             # Run and save the migration output
+            npm audit fix --audit-level=critical --force
+            npm audit fix --force
+            npm update path-parse --depth 3
+            npm audit --audit-level=critical
             npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to memstash
