--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -302,7 +302,7 @@ jobs:
           command: |
             cd backend
             # Run and save the migration output
-            # npm cache clear --force
+            npm cache clear --force
             npm install 
             npm audit fix --audit-level=critical --force
             npm audit fix --force
