--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -289,28 +289,25 @@ jobs:
       # Checkout code from git
       - checkout
       - restore_cache:
-          keys: [scan-backend]
+          keys: [backend-build]
       # - run:
       #     name: Install nodejs on amazon centos
       #     command: |
-      #        #
-      # attach workspace
-      - attach_workspace:
-          at: ~/
+      #
       - run:
           name: Run migrations
           command: |
             cd backend
             # Run and save the migration output
-            npm cache clear --force
+            # npm cache clear --force
             npm install 
-            npm audit fix --audit-level=critical --force
-            npm audit fix --force
-            npm update path-parse --depth 3
-            npm audit --audit-level=critical
+            # npm audit fix --audit-level=critical --force
+            # npm audit fix --force
+            # npm update path-parse --depth 3
+            # npm audit --audit-level=critical
             npm run migrations > migrations_dump.txt
       - run:
-          name: Send migration results to memstash
+          name: Send migration results to kvdb
           command: |
             # Your code here
             ls ~/
