--- a/backend/package.json
+++ b/backend/package.json
@@ -48,11 +48,11 @@
     "cli-color": "^1.3.0",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
-    "express": "^4.17.3",
-    "express-jwt": "^5.3.1",
+    "express": "^4.18.2",
+    "express-jwt": "^8.2.0",
     "glee-jwks-rsa": "^1.1.0",
     "joi": "^14.3.1",
-    "jsonwebtoken": "9.0.0",
+    "jsonwebtoken": "^9.0.0",
     "moment-timezone": "^0.5.28",
     "passport": "^0.4.1",
     "passport-auth0": "^1.3.2",
@@ -68,7 +68,7 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^6.11.11",
-    "@types/express": "^4.17.3",
+    "@types/express": "^7.4.2",
     "@types/jest": "^24.9.1",
     "@types/joi": "^14.3.4",
     "@types/node": "^11.15.9",
