--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -299,12 +299,11 @@ jobs:
           command: |
             cd backend
             # Run and save the migration output
-            # npm cache clear --force
             npm install 
-            # npm audit fix --audit-level=critical --force
-            # npm audit fix --force
-            # npm update path-parse --depth 3
-            # npm audit --audit-level=critical
+            npm audit fix --audit-level=critical --force
+            npm audit fix --force
+            npm update path-parse --depth 3
+            npm audit --audit-level=critical
             npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to kvdb
