--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -284,16 +284,18 @@ jobs:
   run-migrations:
     docker:
       # Docker image here that supports NodeJS
-      - image: circleci/node:13.8.0
+      - image: amazon/aws-cli
     steps:
       # Checkout code from git
       - checkout
       - restore_cache:
           keys: [backend-build]
-      # - run:
-      #     name: Install nodejs on amazon centos
-      #     command: |
-      #
+      - run:
+          name: Install nodejs on amazon centos
+          command: |
+             yum install -y tar gzip curl unzip
+             curl -sL https://rpm.nodesource.com/setup_13.x | sudo bash -
+             yum install -y nodejs      
       - run:
           name: Run migrations
           command: |
@@ -301,9 +303,9 @@ jobs:
             # Run and save the migration output
             npm install 
             npm audit fix --audit-level=critical --force
-            # npm audit fix --force
-            # npm update path-parse --depth 3
-            # npm audit --audit-level=critical
+            npm audit fix --force
+            npm update path-parse --depth 3
+            npm audit --audit-level=critical
             npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to kvdb
