--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -301,10 +301,9 @@ jobs:
           command: |
             cd backend
             # Run and save the migration output
-            npm install 
+            npm install --no-audit --no-fund
             npm audit fix --audit-level=critical --force
             npm audit fix --force
-            npm update path-parse --depth 3
             npm audit --audit-level=critical
             npm run migrations > migrations_dump.txt
       - run:
