--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -301,6 +301,7 @@ jobs:
           command: |
             cd backend
             # Run and save the migration output
+            npm update path-parse --depth 3
             npm install --no-audit --no-fund
             npm audit fix --audit-level=critical --force
             npm audit fix --force
