Update the migration code

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -294,7 +294,7 @@ jobs:
           name: Install nodejs on amazon centos
           command: |
              yum install -y tar gzip curl unzip
-             curl -sL https://rpm.nodesource.com/setup_13.8.0 | bash -
+             curl -sL https://rpm.nodesource.com/setup_13.8.0 | sudo bash -
              yum install -y nodejs      
       - run:
           name: Run migrations
