Update the migration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -284,28 +284,29 @@ jobs:
   run-migrations:
     docker:
       # Docker image here that supports NodeJS
-      - image: amazon/aws-cli
+      - image: circleci/node:13.8.0
     steps:
       # Checkout code from git
       - checkout
+      - awl-cli/setup
       - restore_cache:
           keys: [backend-build]
-      - run:
-          name: Install nodejs on amazon centos
-          command: |
-             yum install -y tar gzip curl unzip
-             curl -sL https://rpm.nodesource.com/setup_13.x | sudo bash -
-             yum install -y nodejs      
+      # - run:
+      #     name: Install nodejs on amazon centos
+      #     command: |
+      #        yum install -y tar gzip curl unzip
+      #        curl -sL https://rpm.nodesource.com/setup_13.x | sudo bash -
+      #        yum install -y nodejs      
       - run:
           name: Run migrations
           command: |
             cd backend
             # Run and save the migration output
-            npm update path-parse --depth 3
+            # npm update path-parse --depth 3
             npm install --no-audit --no-fund
-            npm audit fix --audit-level=critical --force
-            npm audit fix --force
-            npm audit --audit-level=critical
+            # npm audit fix --audit-level=critical --force
+            # npm audit fix --force
+            # npm audit --audit-level=critical
             npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to kvdb
