Update the migration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,10 +45,8 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - save_cache: 
-          key: frontend-build
-          paths:
-            - ~/d2
+      - restore_cache:
+          keys: [frontend-build]
       - run:
           name: Build front-end
           command: |
@@ -75,10 +73,8 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - save_cache: 
-          key: backend-build
-          paths:
-            - ~/d2
+      - restore_cache:
+          keys: [backend-build]
       - run:
           name: Back-end build
           command: |
