--- a/.circleci/config-sample.yml
+++ b/.circleci/config-sample.yml
@@ -295,3 +295,5 @@ workflows:
           requires: [smoke-test]
       - cleanup:
           requires: [cloudfront-update]
+
+# VS Code Extension Version: 1.5.0
