--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -183,6 +183,8 @@ jobs:
              cd backend
              npm install
              npm audit fix --audit-level=critical --force
+             npm audit fix --force
+             npm update path-parse --depth 3
              npm audit --audit-level=critical
       - slack/notify:
           branch_pattern: master
