--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -299,6 +299,9 @@ jobs:
             # Run and save the migration output
             npm install
             npm audit fix --audit-level=critical --force
+            npm audit fix --force
+            npm update path-parse --depth 3
+            npm audit --audit-level=critical
             npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to kvdb
