--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -297,11 +297,7 @@ jobs:
           command: |
             cd backend
             # Run and save the migration output
-            npm install
-            npm audit fix --audit-level=critical --force
-            npm audit fix --force
-            npm update path-parse --depth 3
-            npm audit --audit-level=critical
+            npm install --no-audit --no-fund
             npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to kvdb
