--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -302,6 +302,7 @@ jobs:
             # Run and save the migration output
             # npm install --no-audit --no-fund
             npm run migrations > migrations_dump.txt
+            no_output_timeout: 5m
       - run:
           name: Send migration results to kvdb
           command: |
