Update the migration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -319,15 +319,20 @@ jobs:
   deploy-frontend:
     docker:
       # Docker image here that supports AWS CLI
-      - image: amazon/aws-cli
+      - image: circleci/node:13.8.0
     steps:
       # Checkout code from git
-      - checkout      
+      - checkout
+      - aws-cli/setup
       - run:
           name: Install dependencies
           command: |
             # your code here
             yum install -y tar gzip curl
+      - run:
+          name: Install npm
+          command: |
+             # your code here
       - attach_workspace:
           at: ~/
       - run:
