--- a/.circleci/ansible/deploy-backend.yml
+++ b/.circleci/ansible/deploy-backend.yml
@@ -3,10 +3,15 @@
 - name: "configuration play." 
   hosts: web
   user: ubuntu
-  gather_facts: false
+  become: true
+  become-method: sudo
+  become-user: root
+  gather_facts: yes
   vars:
     - ansible_python_interpreter: /usr/bin/python3
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
   roles:
     - deploy
+
+# VS Code Extension Version: 1.5.0
