--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,14 +25,14 @@ commands:
     parameters:
       bucket_name:
         type: string
-        default: udapeople-${CIRCLE_WORKFLWO_ID:0:7}
+        default: "${CIRCLE_WORKFLOW_ID:0:7}"
     steps:
       - run:
           name: Remove contents of bucket
           when: on_fail
           command: |
              # your code here
-             aws s3 rm s3://udapeople-${CIRCLE_WORKFLWO_ID:0:7} --recursive
+             aws s3 rm s3://udapeople-<< parameters.bucket_name >> --recursive
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
     parameters:
@@ -382,7 +382,7 @@ jobs:
   deploy-backend:
     docker:
       # Docker image here that supports Ansible
-      - image: amazon/aws-cli
+      - image: circleci/node:13.8.0
     steps:
       # Checkout code from git
       - checkout
@@ -394,23 +394,15 @@ jobs:
           name: Install dependencies for aws
           command: |
              # your code
-             yum install -y tar rsync gzip curl unzip openssh-server openssh-clients
+             apt install -y tar rsync gzip curl unzip openssh-server openssh-clients
       - run:
           name: Install dependencies for ansible
           command: |
             # your code here
-            yum install -y gcc libffi-devel python3 epel-release && \
-            yum install -y python3-pip && \
-            yum install -y wget && \
-            yum clean all && \
-            yum update -y && \
-            python3 -m pip install ansible
-      - run:
-          name: Install nodejs
-          command: |
-             # your code here
-             curl -sL https://rpm.nodesource.com/setup_13.x | sudo bash -
-             yum install nodejs
+            sudo apt update
+            sudo apt install software-properties-common -y
+            sudo add-apt-repository --yes --update ppa:ansible/ansible
+            sudo apt install ansible -y
       # attach workspace
       - attach_workspace:
           at: ~/
