--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -386,6 +386,7 @@ jobs:
     steps:
       # Checkout code from git
       - checkout
+      - aws-cli/setup
       # Add ssh keys with fingerprint
       - add_ssh_keys:
            fingerprints: ["6c:f8:3d:35:4b:aa:19:6a:94:22:b8:52:e1:75:9d:23"]
@@ -394,7 +395,7 @@ jobs:
           name: Install dependencies for aws
           command: |
              # your code
-             apt install -y tar rsync gzip curl unzip openssh-server openssh-clients
+             sudo apt install -y tar rsync gzip curl unzip openssh-server openssh-clients
       - run:
           name: Install dependencies for ansible
           command: |
@@ -422,7 +423,7 @@ jobs:
              ansible-playbook -i inventory.txt deploy-backend.yml
       # Here's where you will add some code to rollback on failure
       - remove-bucket-contents
-      - destroy-environment 
+      - destroy-environment
 
 #   smoke-test:
 #     docker:
