--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -400,9 +400,8 @@ jobs:
           name: Install dependencies for ansible
           command: |
             # your code here
+            sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 93C4A3FD7BB9C367
             sudo apt update
-            sudo apt install software-properties-common -y
-            sudo add-apt-repository --yes --update ppa:ansible/ansible
             sudo apt install ansible -y
       # attach workspace
       - attach_workspace:
