--- a/.circleci/ansible/deploy-backend.yml
+++ b/.circleci/ansible/deploy-backend.yml
@@ -4,8 +4,8 @@
   hosts: web
   user: ubuntu
   become: true
-  become-method: sudo
-  become-user: root
+  become_method: sudo
+  become_user: root
   gather_facts: yes
   vars:
     - ansible_python_interpreter: /usr/bin/python3
